[metadata]
name = S2TD
version = 0.0.1
author = Henrik Fisser
author_email = henrik.fisser@t-online.de
description = This package provides a method for automatically detecting moving trucks and vehicles of similar size
in Sentinel-2 remote sensing data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hfisser/S2TD
project_urls =
    Bug Tracker = https://github.com/hfisser/S2TD/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src