[metadata]
name = S2TD18
version = 0.0.1
author = Henrik Fisser
author_email = henrik.fisser@t-online.de
description = A method for detecting moving trucks in Sentinel-2 remote sensing data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hfisser/S2TD
project_urls =
    Bug Tracker = https://github.com/hfisser/S2TD/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    fiona
    geopandas >= 0.9
    numpy >= 1.19
    osmpythontools >= 0.8
    pandas >= 1.1
    rasterio >= 1.2
    scikit-learn >= 0.23
    xarray >= 0.16

[options.packages.find]
where = src